# rust-example-config-concurrency

./: LICENSE  README.md
.github/workflows/: slack-notify.yml
service/: Cargo.toml
service/env/: service.yml
service/src/: custom_tracing_layer.rs  main.rs
